--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1"
   },
   "devDependencies": {
